--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -105,7 +105,7 @@
 
     &__message {
         position: relative;
-        padding: 10px;
+        padding: 10px 10px 28px 10px;
         min-height: 10px;
         border-radius: 5px;
         margin-bottom: 10px;
@@ -123,6 +123,14 @@
 
         &.last {
             margin-bottom: 0;
+        }
+
+        &__createdAt {
+            position: absolute;
+            right: 4px;
+            bottom: 3px;
+            font-size: 11px;
+            color: #555;
         }
     }
 
