--- a/resources/assets/sass/components/tile.scss
+++ b/resources/assets/sass/components/tile.scss
@@ -26,6 +26,10 @@
         padding: map_get($tileBody, padding) + px;
     }
 
+    &__article {
+        padding: map_get($tileBodyArticles, padding) + px;
+    }
+
     &__footer {
 
     }
