--- a/resources/assets/sass/scaffolding.scss
+++ b/resources/assets/sass/scaffolding.scss
@@ -31,3 +31,11 @@ body {
     border-radius: 16px;
     border: 2px solid #fff;
 }
+
+.margin10 {
+    margin: 10px 0 10px 0;
+}
+
+.fontSize15 {
+    font-size: 15px;
+}
