--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -5,18 +5,7 @@
     }
 }
 
-@mixin private-chat-list-mobile {
-    @for $i from 0 through 10 {
-        .PrivateChatItem--#{$i} {
-            &.mobile {
-                bottom: (60 * $i) + px;
-            }
-        }
-    }
-}
-
 @include private-chat-list;
-@include private-chat-list-mobile;
 
 .PrivateChatItem {
     position: fixed;
@@ -180,5 +169,42 @@
 
     &.focus {
         box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+}
+
+@media (max-width: $screen-sm-max) {
+    .PrivateChatItem {
+        z-index: 50;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: auto;
+
+        &__minimize {
+            display: none;
+        }
+
+        &__head {
+            height: map_get($privateChatItem, 'headHeightMobileMaximized') + px;
+            padding-top: 21px;
+        }
+
+        &__body {
+            height: -webkit-calc(100% - #{map_get($privateChatItem, 'headHeightMobileMaximized') + px});
+            height: -moz-calc(100% - #{map_get($privateChatItem, 'headHeightMobileMaximized') + px});
+            height: calc(100% - #{map_get($privateChatItem, 'headHeightMobileMaximized') + px});
+
+            &__wrapper {
+                height: -webkit-calc(100% - #{map_get($privateChatItem, 'headHeightMobileMaximized') + px});
+                height: -moz-calc(100% - #{map_get($privateChatItem, 'headHeightMobileMaximized') + px});
+                height: calc(100% - #{map_get($privateChatItem, 'headHeightMobileMaximized') + px});
+            }
+
+            &__content {
+                height: -webkit-calc(100vh - 132px);
+                height: -moz-calc(100vh - 132px);
+                height: calc(100vh - 132px);
+            }
+        }
     }
 }
