--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -7,7 +7,7 @@
 // Style guide: Brand Variables
 
 // colors
-$slate: #BF004D;
+$slate: #610486;
 $slateLight: #A22770;
 $dark: #4D4981;
 $tomato: #ef4f2b;
