--- a/resources/assets/sass/components/private-chat-manager.scss
+++ b/resources/assets/sass/components/private-chat-manager.scss
@@ -174,6 +174,7 @@
 
                 &__body {
                     max-height: initial;
+                    background-color: #fff;
                     height: -webkit-calc(100% - #{map_get($privateChatManager, 'headHeightMobileMaximized') + px});
                     height: -moz-calc(100% - #{map_get($privateChatManager, 'headHeightMobileMaximized') + px});
                     height: calc(100% - #{map_get($privateChatManager, 'headHeightMobileMaximized') + px});
