hovering on chat action icons

--- a/resources/assets/sass/components/private-chat-manager.scss
+++ b/resources/assets/sass/components/private-chat-manager.scss
@@ -43,6 +43,11 @@
             display: none;
         }
 
+        .material-icons {
+            &:hover {
+                color: #bbb !important;
+            }
+        }
     }
 
     &__item {
