--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -65,6 +65,7 @@
     &__minimize,
     &__clear {
         display: flex;
+
         cursor: pointer;
 
         .material-icon {
@@ -77,6 +78,12 @@
             &.minimize {
                 position: relative;
                 bottom: 2px;
+            }
+        }
+
+        .material-icons {
+            &:hover {
+                color: #bbb !important;
             }
         }
     }
