--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -61,7 +61,7 @@
         }
 
         &:hover {
-            box-shadow: 0 0 4px rgba(0,0,0,0.15);
+            background-color: #eee;
         }
     }
 
