various small fixes

--- a/resources/assets/sass/components/private-chat-manager.scss
+++ b/resources/assets/sass/components/private-chat-manager.scss
@@ -110,9 +110,10 @@
 
         &__date {
             display: inline-block;
-            width: 120px;
+            width: 160px;
             text-align: right;
             font-size: 12px;
+            line-height: 24px;
         }
 
         &__lastMessage {
