--- a/resources/assets/sass/components/private-chat-manager.scss
+++ b/resources/assets/sass/components/private-chat-manager.scss
@@ -51,6 +51,28 @@
     }
 
     &__item {
+        position: relative;
+
+        &__deleteIcon {
+            display: none !important;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: #fff;
+            border-radius: 50%;
+            color: #ff5b49;
+
+            &:hover {
+                box-shadow: 0 0 4px rgba(0,0,0,0.2);
+                color: #ff2718;
+            }
+
+            &:active {
+                box-shadow: 0 0 4px rgba(0,0,0,0.2);
+                color: #ff5b49;
+            }
+        }
+
         &:first-child {
             .PrivateChatManager__item__right {
                 border-top: 0;
@@ -63,6 +85,10 @@
 
         &:hover {
             background-color: #efefef;
+
+            .PrivateChatManager__item__deleteIcon {
+                display: inline-block !important;
+            }
         }
 
         display: flex;
