sql dump, fix user summary overflow

--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -20,6 +20,7 @@
 
     &__user-image {
         position: absolute;
+        overflow: hidden;
         width: 100%;
         left: 0;
         right: 0;
