--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -13,6 +13,20 @@
     bottom: 0;
     width: map_get($privateChatItem, width) + px;
 
+    &__imagePreview {
+        padding: 10px;
+        text-align: right;
+
+        img {
+            height: 150px;
+            border-radius: 5px;
+        }
+    }
+
+    &__image {
+        width: 100%;
+    }
+
     &__head {
         border-radius: 2px 2px 0 0;
         padding: 10px;
