--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -38,7 +38,7 @@
         }
 
         &__notify {
-            background-color: $topaz;
+            background-color: #b53d22;
         }
     }
 
