--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -151,6 +151,7 @@
         border-bottom: 1px solid $lightGrey !important;
         width: 95%;
         overflow: hidden;
+        resize: none;
 
         &:focus {
             outline: 0;
