--- a/resources/assets/sass/views/edit-profile.scss
+++ b/resources/assets/sass/views/edit-profile.scss
@@ -2,4 +2,10 @@
     .material-icon-calendar {
         font-size: 17px;
     }
+
+    table .action-buttons .btn {
+        display: block;
+        margin-bottom: 5px;
+        width: 100%;
+    }
 }
