--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -144,20 +144,32 @@
 
     &__message {
         position: relative;
+        display: inline-block;
         padding: 10px 10px 28px 10px;
         min-height: 10px;
         border-radius: 5px;
         margin-bottom: 10px;
         word-break: break-all;
+        width: 75%;
+
+        &__container {
+            &--user-a {
+                text-align: left;
+            }
+
+            &--user-b {
+                text-align: right;
+            }
+        }
 
         &--user-a {
             background: #FDE4CE;
-            margin-right: 10px;
+            text-align: left;
         }
 
         &--user-b {
+            text-align: left;
             background: #EEF2E7;
-            margin-left: 10px;
         }
 
         &.last {
@@ -266,6 +278,20 @@
     left: 0;
     right: 0;
     width: auto;
+
+    .PrivateChatItem {
+        &__message {
+            max-width: 800px;
+
+            &--user-a {
+                margin-right: 20%;
+            }
+
+            &--user-b {
+                margin-left: 20%;
+            }
+        }
+    }
 
     .PrivateChatItem__resetMaximize {
         display: flex;
