--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,6 +30,7 @@
 @import "components/user-profile";
 @import "components/private-chat-manager";
 @import "components/private-chat-item";
+@import "components/image-modal";
 
 // Modules
 @import "modules/online-users";
