--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -65,11 +65,14 @@ $fontSize: (
 $navbarLinkColor: $sugar;
 $navbarBgColor: $slate;
 
-$navbarHeight: 100;
+$navbarHeight: 70;
 $navbarBorderWidth: 1;
 $navbarLineHeight: 22;
 
 $logoHeight: round($navbarHeight * 0.55);
+$userMenuImageContainerDimension: 38;
+$userMenuImageDimension: 50;
+$userMenuImageTop: ($navbarHeight - $userMenuImageContainerDimension)/2;
 
 //Footer
 $footerLinkTextColor: $lightBlueDull;
