--- a/resources/assets/sass/views/edit-profile.scss
+++ b/resources/assets/sass/views/edit-profile.scss
@@ -18,4 +18,25 @@
             font-size: 15px;
         }
     }
+
+    label {
+        font-size: 14px;
+        color: $mainColor;
+    }
+
+    table {
+        th {
+            font-size: 14px;
+            color: #4e5d75;
+        }
+
+        td.action-buttons {
+            padding-left: 0;
+            width: 200px;
+
+            .btn {
+                width: 200px;
+            }
+        }
+    }
 }
