redirect to LP, register through LP. styling

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,7 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+@import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css";
 
 // Jquery Autocomplete
 @import "~jquery-autocomplete/jquery.autocomplete";
