--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -40,6 +40,7 @@
 @import "modules/search";
 
 // Views
+@import "views/articles";
 @import "views/edit-profile";
 
 @import "vue-apps/private-chat/main";
