--- a/resources/assets/sass/components/tile.scss
+++ b/resources/assets/sass/components/tile.scss
@@ -26,8 +26,15 @@
         padding: map_get($tileBody, padding) + px;
     }
 
-    &__article {
+    &__articles {
         padding: map_get($tileBodyArticles, padding) + px;
+    }
+
+    &__article {
+        .Tile__body {
+            padding: 30px;
+            text-align: justify;
+        }
     }
 
     &__footer {
