faqs, articles, privacy

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -41,6 +41,7 @@
 
 // Views
 @import "views/articles";
+@import "views/faq";
 @import "views/edit-profile";
 
 @import "vue-apps/private-chat/main";
