--- a/resources/assets/sass/components/tile.scss
+++ b/resources/assets/sass/components/tile.scss
@@ -14,6 +14,8 @@
     background-color: $tileBgColor;
     box-shadow: 0 1px 2px 0 rgba(45, 49, 66, 0.25);
 
+    text-align: justify;
+
     &__heading {
         padding: map_get($tileHeading, padding) + px;
         font-size: map_get($tileHeading, fontSize) + px;
@@ -23,7 +25,11 @@
     }
 
     &__body {
-        padding: map_get($tileBody, padding) + px;
+        padding: 20px map_get($tileBody, padding) + px;
+
+        h4 {
+            margin-top: 30px;
+        }
     }
 
     &__articles {
